--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.ktor_version = '1.2.5'
     ext.realm_version = '5.10.0'
     ext.kotlin_client_version = '1.2.0-beta01'
+    ext.moshiVersion="1.8.0"
     repositories {
         google()
         jcenter()
@@ -13,7 +14,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.2'
         classpath "io.realm:realm-gradle-plugin:$realm_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
