--- a/core/build.gradle
+++ b/core/build.gradle
@@ -81,6 +81,13 @@ dependencies {
     //Gson
     api 'com.google.code.gson:gson:2.8.5'
 
+    //Moshi
+    api "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
+    api "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+
     //Injection
     api "com.google.dagger:dagger:2.19"
     api "com.google.dagger:dagger-android:2.19"
