--- a/core/build.gradle
+++ b/core/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     api 'com.google.firebase:firebase-functions:19.0.1'
     api 'com.google.firebase:firebase-inappmessaging-display:19.0.0'
     api 'com.google.firebase:firebase-analytics:17.2.0'
+    api 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    api 'com.google.firebase:firebase-perf:19.0.2'
+
     //Admin
 //    implementation 'com.google.firebase:firebase-admin:6.10.0'
 
@@ -198,4 +201,11 @@ dependencies {
     //Anko
     api "org.jetbrains.anko:anko:0.10.8"
     api "org.jetbrains.anko:anko-commons:0.10.8"
+
+    //ImagePicker
+    api 'com.asksira.android:bsimagepicker:1.2.2'
+
+    //ImagePicker
+    api 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+    api 'com.github.esafirm.android-image-picker:rximagepicker:2.2.0'
 }
