--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,11 @@ android {
 
 
     defaultConfig {
-        applicationId "br.com.motoflash.client"
+        applicationId "com.motoflash.appusuario"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 17
+        versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
