--- a/motoboy/build.gradle
+++ b/motoboy/build.gradle
@@ -16,11 +16,11 @@ android {
 
 
     defaultConfig {
-        applicationId 'br.com.motoflash.courier'
+        applicationId 'com.motoflash.appmotorista'
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 25
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
