--- a/core/build.gradle
+++ b/core/build.gradle
@@ -84,12 +84,6 @@ dependencies {
     //Gson
     api 'com.google.code.gson:gson:2.8.5'
 
-    //Moshi
-    api "com.squareup.moshi:moshi-kotlin:$moshiVersion"
-    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
-    api "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
-
 
     //Injection
     api "com.google.dagger:dagger:2.19"
@@ -116,7 +110,7 @@ dependencies {
     api 'com.etebarian:meow-bottom-navigation:1.0.4'
 
     //Dialogflow
-    api 'ai.api:sdk:2.0.7'
+//    api 'ai.api:sdk:2.0.7'
 
     //Maps
     api 'com.google.android.gms:play-services-maps:17.0.0'
@@ -173,14 +167,14 @@ dependencies {
     api 'com.github.drfonfon:android-kotlin-geohash:1.0'
 
     //Algolia
-    api "com.algolia:algoliasearch-client-kotlin-jvm:$kotlin_client_version"
-    // Choose one of the following http client
-    api "io.ktor:ktor-client-apache:$ktor_version"
-    api "io.ktor:ktor-client-okhttp:$ktor_version"
-    api "io.ktor:ktor-client-android:$ktor_version"
-    api "io.ktor:ktor-client-cio:$ktor_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
-    api "io.ktor:ktor-client-jetty:$ktor_version"
+//    api "com.algolia:algoliasearch-client-kotlin-jvm:$kotlin_client_version"
+//    // Choose one of the following http client
+//    api "io.ktor:ktor-client-apache:$ktor_version"
+//    api "io.ktor:ktor-client-okhttp:$ktor_version"
+//    api "io.ktor:ktor-client-android:$ktor_version"
+//    api "io.ktor:ktor-client-cio:$ktor_version"
+//    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+//    api "io.ktor:ktor-client-jetty:$ktor_version"
 
 
     //Car Animation
