--- a/motoboy/build.gradle
+++ b/motoboy/build.gradle
@@ -16,10 +16,10 @@ android {
 
 
     defaultConfig {
-        applicationId 'com.motoflash.appmotorista'
+        applicationId 'br.com.motoflash.courier'
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 25
+        versionCode 1
         versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
